ignore release folder and .vcxproj

--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,12 @@ sph/output/*
 *.suo
 *.user
 *.sln.docstates
+*.vcxproj
 
 # Build results
 
 [Dd]ebug/
-[Rr]elease/
+*/[Rr]elease*/
 x64/
 build/
 [Bb]in/
