--- a/PROJ1_WIN/565Pathtracer/565Pathtracer.vcxproj.filters
+++ b/PROJ1_WIN/565Pathtracer/565Pathtracer.vcxproj.filters
@@ -18,6 +18,7 @@
     <ClCompile Include="..\..\src\ObjCore\objloader.cpp">
       <Filter>ObjCore</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\KDTree.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\cudaMat4.h" />
@@ -36,12 +37,13 @@
     <ClInclude Include="..\..\src\stb_image\stb_image.h">
       <Filter>stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\ObjCore\obj.h">
-      <Filter>ObjCore</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\ObjCore\objloader.h">
       <Filter>ObjCore</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\ObjCore\obj.h">
+      <Filter>ObjCore</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\KDTree.h" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="..\..\src\raytraceKernel.cu" />
