updated gitignore to include debug info

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ PROJ1/WIN/src/raytraceKernel.cu.deps
 PROJ1_WIN/565Pathtracer/Release (v5.5)/
 PROJ1_WIN/Release (v5.5)/
 PROJ1_WIN/565Pathtracer/Win32/Release (v5.5)/
+PROJ1_WIN/565Pathtracer/Debug (v5.5)/
+PROJ1_WIN/Debug (v5.5)/
 x64/
 build/
 [Bb]in/
