wrote gpu traversal

--- a/PROJ1_WIN/565Pathtracer/565Pathtracer.vcxproj.filters
+++ b/PROJ1_WIN/565Pathtracer/565Pathtracer.vcxproj.filters
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="..\..\src\raytraceKernel.cu" />
+    <CudaCompile Include="..\..\src\KDTree.cu" />
+    <CudaCompile Include="..\..\src\intersections.cu" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="stb_image">
