KD Tree works on GPU

--- a/PROJ1_WIN/565Pathtracer/565Pathtracer.vcxproj.filters
+++ b/PROJ1_WIN/565Pathtracer/565Pathtracer.vcxproj.filters
@@ -44,6 +44,7 @@
       <Filter>ObjCore</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\KDTree.h" />
+    <ClInclude Include="..\..\src\KDTreeStructs.h" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="..\..\src\raytraceKernel.cu" />
